A new tracker setup.

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,155 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
+
+* {
+  font-family: 'Work Sans', sans-serif;
+}
+
+body {
+  background-color: #333;
+}
+
+.logo {
+  margin: 1rem auto;
+  display: block;
+  text-align: center;
+  max-width: 140px;
+}
+
+.keyInput {
+  display: flex;
+  margin-top: 4rem;
+  flex-direction: column;
+  align-items: center;
+  color: #e7e8d2;
+  animation: slowRender .7s;
+}
+
+.eventFeed {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.eventCard {
+  display: flex;
+  flex-direction: column;
+  background-color: #e7e8d2;
+  border-radius: 20px 20px 20px 20px;
+  height: auto;
+  overflow: hidden;
+  max-width: 308px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  transition: height 0.5s ease-in-out, width 0.5s ease-in-out;
+  animation: slowRender .7s;
+  margin: 1rem;
+}
+
+.eventName {
+  margin-left: 0.5rem;
+}
+
+.ticketInfo {
+  margin: .5rem 0;
+}
+
+.transition {
+  height: 771px;
+
+}
+
+.eventInfo {
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.scannedTickets {
+  margin-top: 2rem;
+}
+
+.loading {
+  animation: loadingAnimation infinite 2s;
+  text-align: center;
+  color: #fff;
+}
+
+.loadingText {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.currentKey {
+  font-size: small;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.small {
+  font-size: small;
+}
+ .error {
+  color: red;
+  animation: slowRender .7s;
+}
+
+.refresh {
+  background-color: #ffd72e; 
+  animation: slowRender .7s;
+}
+
+
+@keyframes loadingAnimation {
+  0% {
+    transform: scale(0.75);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0.75);
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@keyframes slowRender {
+  0% { opacity: 0; }
+  50% { opacity: 0; }
+  90% { opacity: 0; }
+  100% { opacity: 1; }
 }
 
-.App-link {
-  color: #61dafb;
+h4,
+p {
+  margin: 7px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input {
+  background: #e7e8d2;
+  border-radius: 16px;
+  text-align: center;
+  padding: 12px;
+  border: 1px #333 solid;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+button {
+  margin: 1rem;
+  position: relative;
+  padding: 0.7rem;
+  border-radius: 15px;
+  background-color: #1ccfc9;
+  color: #333;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  width: 188px;
+}
+
+button:hover {
+  background-color: #ffd72e;
+  cursor: pointer;
+}
+
+.refresh:hover {
+  background-color: #1ccfc9;
+}
+
+img {
+  margin-top: 2rem;
 }
